@@ -1238,7 +1238,7 @@ div.message-htmlpart div.rcmBody
   position: absolute;
   top: 100px;
   left: 20px;
-  width: 170px;
+  width: 175px;
 }
 
 #compose-attachments ul
